# ar1

./: CMakeLists.txt  run.bat  test.bat
apps/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: lib.h
lib/src/: lib.cpp
tests/: CMakeLists.txt  tests.cpp
